Still try to fix the image alignment.

--- a/app/assets/stylesheets/ls_reports_spreadsheet.scss
+++ b/app/assets/stylesheets/ls_reports_spreadsheet.scss
@@ -259,5 +259,10 @@ div.precept-header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 15%;
+}
+
+.column-img {
+  flex: 33.33%;
+  padding: 5px;
 }
